<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="6dp"
        android:paddingHorizontal="16dp"
        android:background="@color/colorLightGray"
        >

        <Button
            android:id="@+id/btn_goBack"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:text="@string/go_back"
            android:textSize="13sp"
            android:textColor="@color/black"
            android:drawableTint="@color/black"
            android:drawableLeft="@drawable/ic_go_back"
            android:backgroundTint="@color/white"
            android:paddingStart="8dp"
            android:paddingEnd="12dp"
            android:paddingBottom="8dp"
            tools:drawableTint="@color/black"
            tools:textColor="@color/black"
            tools:backgroundTint="@color/white"
            />

    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_shopping_cart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="8dp"
        android:clipToPadding="false"

        tools:listitem="@layout/item_shopping_cart_book"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/total_price"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginVertical="8dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_ordering"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            tools:text="600 руб."
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginVertical="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toEndOf="@id/tv_total"
            app:layout_constraintBottom_toTopOf="@id/btn_ordering"
            />

    </FrameLayout>

    <Button
        android:id="@+id/btn_ordering"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/ordering"
        android:textSize="15sp"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="16dp"
        android:backgroundTint="@color/colorLightGray"
        android:textColor="@color/black"
        tools:backgroundTint="@color/colorLightGray"
        tools:textColor="@color/black"
        />

</LinearLayout>
