<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorLightGray"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp">

        <Button
            android:id="@+id/btn_goBack"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:backgroundTint="@color/background"
            android:drawableLeft="@drawable/ic_go_back"
            android:drawableTint="@color/colorText"
            android:paddingStart="8dp"
            android:paddingEnd="12dp"
            android:paddingBottom="8dp"
            android:text="@string/go_back"
            android:textColor="@color/colorText"
            android:textSize="13sp" />
    </FrameLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="615dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivBook"
                android:layout_width="wrap_content"
                android:layout_height="295dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/image_book_test" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="4dp"
                android:textColor="@color/colorCaptionText"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="Письма к брату Тео" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="4dp">

                <TextView
                    android:id="@+id/tvAuthor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:textColor="@color/colorText"
                    android:textSize="13sp"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="Ван Гог Винсент" />

                <TextView
                    android:id="@+id/tvEdition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:textColor="@color/colorText"
                    android:textSize="13sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="Издание 2023 года" />
            </FrameLayout>

            <TextView
                android:id="@+id/tvAnnotation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="4dp"
                android:lineSpacingMultiplier="1.25"
                android:textColor="@color/colorText"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="«Письма к брату Тео» – поразительный по силе и искренности человеческий документ, повествующий не только о фактах недолгой и трагической жизни Винсента Ван Гога, но и о том, какая огромная внутренняя работа, какое духовное содержание стояло за каждой картиной этого не признанного при жизни гения..." />

            <FrameLayout
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/grade"
                    android:textColor="@color/colorText"
                    android:textSize="13sp"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/tvGrade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:textColor="@color/colorText"
                    android:textSize="13sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="4.9" />
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="12dp"
                android:text="@string/reviews"
                android:textColor="@color/colorCaptionText"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_product_page"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:clipToPadding="false"
                android:paddingHorizontal="16dp"

                tools:listitem="@layout/item_review" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorLightGray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="19dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/price1"
                android:textColor="@color/colorText"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:textColor="@color/colorText"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="240 руб." />
        </FrameLayout>


        <include
            android:id="@+id/ll_counter"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            layout="@layout/counter"/>

        <Button
            android:id="@+id/btn_buy"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/background"
            android:text="@string/buy"
            android:textColor="@color/colorText"
            android:textSize="13sp" />
    </FrameLayout>
</LinearLayout>
